# object-tracker-cpp

./: CMakeLists.txt
CMakeModules/: FindJSONCPP.cmake  FindLIBGQLPARSER.cmake  FindPOCO.cmake
connection/: Connection.h  RoboticsConnection.cpp  RoboticsConnection.h
entry/: Entry.cpp  Entry.h
opencv/: CameraCalibrationOpenCV.h  CameraCalibrationOpencv.cpp
samples/: NotificationQueue.cpp  ObjectTrackingEngine.cpp  ObjectTrackingEngineTest.cpp  jsoncpp_test.cpp  operato_connect_test.cpp  test.json  ws_client.cpp
taskbase/: Task.h  TaskManager.cpp  TaskManager.h  TaskNotification.h
tasks/: CameraCalibrationTask.cpp  CameraCalibrationTask.h  ConnectionTask.cpp  ConnectionTask.h  HandEyeCalibrationTask.cpp  HandEyeCalibrationTask.h
unittest/: OTETestSuite.cpp  OTETestSuite.h  TaskTest.cpp  TaskTest.h  TestMain.cpp
